usunieto błąd przycisku informacji usinięto błąd wyśweitlania historii

--- a/vehicle-rental/src/components/employee_panel/style.css
+++ b/vehicle-rental/src/components/employee_panel/style.css
@@ -50,3 +50,11 @@
 .form-select{
     font-size: 20px;
 }
+
+.info_div{
+    margin-top: 10px;
+    border: 2px solid black;
+    margin: 10px;
+    padding: 10px;
+}
+
